# flexfl

./: LICENSE  Makefile  README.md  pyproject.toml
examples/: dataset_sampling.ipynb  mnist_fedavg.py
src/flexfl/: __init__.py  __main__.py  app.py
src/flexfl/aggregation/: base.py  fedavg.py
src/flexfl/client/: __init__.py  base.py
src/flexfl/data/: __init__.py  loader.py  sampler.py
src/flexfl/server/: __init__.py  base.py
tests/: test_loader.py
tests/flexfl/: test_sample.py
